Fixed something on mobile.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     padding: 18px;
     font-size: 64px;  
     background-color: rgba(246, 226, 226, 0.4);
-    width: 100%;
 }
 
 
@@ -31,6 +30,11 @@ footer {
     background-color: rgba(246, 226, 226, 0.4);
 
     min-width: 100%;
+}
+
+footer p {
+    font-size: 22px;
+    font-weight: 600;
 }
 
 .fa-github {
@@ -150,8 +154,10 @@ button {
     }
     .controller {
         margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .header, footer { 
         width: 100vw;
@@ -162,7 +168,7 @@ button {
     .canvas {
         width: 300px;
         height: 300px;
-        margin-left: 1%;
+        margin-left: 0;
         margin-top: 20px;
     }
     .footer_content {
@@ -171,6 +177,10 @@ button {
         align-items: center;
     }
     
+    footer p {
+        font-size: 16px;
+    }
+
     .header {
         font-size: 48px;
     }
